# edr_blocker

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: edr_blocker.h  process_info.h  safe_ptr.h  socket_connection.h
src/: edr_blocker.cpp  process_info.cpp
